added the header

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>f</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>Hi THis IS REPO 2 Testing from VS Code</h1>
-   changing test
+   <header class="header">
+        <div class="header-left"><h2>Ma<span>r</span>y</h2></div>
+       <div class="header-right">
+              <p>Portfolio</p>
+              <p>Blog</p>
+              <div class="button">Hire me</div>
+       </div>
+   </header>
 </body>
 </html>
